模板方法优化, 增加API调用安全性检查